--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   "license": "MIT",
   "repository": "mathnuts/suptitles",
   "devDependencies": {
-    "ts-loader": "^6.2.1",
     "typescript": "^3.7.5"
+  },
+  "scripts": {
+    "build": "tsc",
+    "prepare": "npm run build"
   },
   "keywords": [
     "pgs",
